--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="purple">#5218FA</color>
     <color name="green">#A0E418</color>
     <color name="dark_blue">#1C2733</color>
-    <color name="red">#D90000</color>
+    <color name="red">#E90707</color>
     <color name="light_grey">#CACACA</color>
     <color name="blue_icons">#163760</color>
     <color name="light_black">#6F161D25</color>
