--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,4 +97,14 @@
         <item name="android:textColor">@color/grey</item>
     </style>
 
+    <style name="ErrorEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/error_edit_text_background</item>
+        <item name="android:padding">13dp</item>
+        <item name="android:layout_marginLeft">80dp</item>
+        <item name="android:layout_marginRight">80dp</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
