--- a/app/src/main/res/drawable/email_svg.xml
+++ b/app/src/main/res/drawable/email_svg.xml
@@ -1,7 +1,13 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="23dp" android:viewportHeight="24" android:viewportWidth="24" android:width="23dp">
-      
-    <path android:fillColor="#00000000" android:pathData="M4,7L10.2,11.65C11.267,12.45 12.733,12.45 13.8,11.65L20,7" android:strokeColor="#163760" android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="2"/>
-      
-    <path android:fillColor="#00000000" android:pathData="M5,5L19,5A2,2 0,0 1,21 7L21,17A2,2 0,0 1,19 19L5,19A2,2 0,0 1,3 17L3,7A2,2 0,0 1,5 5z" android:strokeColor="#163760" android:strokeLineCap="round" android:strokeWidth="2"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <group>
+    <clip-path
+        android:pathData="M0,0h24v24h-24z"/>
+    <path
+        android:pathData="M4.308,19.5C3.803,19.5 3.375,19.325 3.025,18.975C2.675,18.625 2.5,18.197 2.5,17.692V6.308C2.5,5.803 2.675,5.375 3.025,5.025C3.375,4.675 3.803,4.5 4.308,4.5H19.692C20.197,4.5 20.625,4.675 20.975,5.025C21.325,5.375 21.5,5.803 21.5,6.308V17.692C21.5,18.197 21.325,18.625 20.975,18.975C20.625,19.325 20.197,19.5 19.692,19.5H4.308ZM12,12.558L4,7.442V17.692C4,17.782 4.029,17.856 4.087,17.913C4.144,17.971 4.218,18 4.308,18H19.692C19.782,18 19.856,17.971 19.913,17.913C19.971,17.856 20,17.782 20,17.692V7.442L12,12.558ZM12,11L19.846,6H4.154L12,11ZM4,7.442V6V17.692C4,17.782 4.029,17.856 4.087,17.913C4.144,17.971 4.218,18 4.308,18H4V7.442Z"
+        android:fillColor="#071E3D"/>
+  </group>
 </vector>
