--- a/app/src/main/res/layout/activity_register_credit_card.xml
+++ b/app/src/main/res/layout/activity_register_credit_card.xml
@@ -234,7 +234,7 @@
             style="@style/barranumbercard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="0dp"
             android:maxLength="3"
             android:width="143dp"
@@ -319,7 +319,8 @@
             android:layout_marginTop="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/etName"/>
+            app:layout_constraintTop_toBottomOf="@id/etName"
+            />
 
 
         <androidx.appcompat.widget.AppCompatButton
