--- a/app/src/main/res/layout/activity_confirmar_usuario.xml
+++ b/app/src/main/res/layout/activity_confirmar_usuario.xml
@@ -37,7 +37,7 @@
         android:id="@+id/appCompatTextView"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="25dp"
         android:fontFamily="@font/kronaone_regular"
         android:text="@string/abrir_armario2"
         android:textColor="@color/grey"
@@ -73,27 +73,24 @@
 
     <ImageView
         android:id="@+id/photoImageView"
-        android:layout_width="315dp"
-        android:layout_height="465dp"
-        android:layout_marginBottom="180dp"
+        android:layout_width="260dp"
+        android:layout_height="360dp"
+        android:layout_marginTop="92dp"
         android:contentDescription="@string/content_Description"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/texto"
         tools:ignore="SpeakableTextPresentCheck" />
-
 
     <ImageView
         android:id="@+id/photoImageView2"
-        android:layout_width="315dp"
-        android:layout_height="465dp"
-        android:layout_marginBottom="180dp"
-        android:layout_marginTop="295dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="260dp"
+        android:layout_height="360dp"
+        android:layout_marginTop="92dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
-
+        app:layout_constraintTop_toBottomOf="@id/texto" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btntrocarimagensEsquerda"
@@ -122,7 +119,7 @@
         style="@style/login_button"
         android:layout_width="250dp"
         android:layout_height="49dp"
-        android:layout_marginTop="-130dp"
+        android:layout_marginTop="-115dp"
         android:fontFamily="@font/kronaone_regular"
         android:gravity="center"
         android:text="@string/confirmapessoa"
